website/versioned_docs/version-0.0.4/api/cloud/cloud.connecttoinstance.connectenv.md
---
id: version-0.0.4-cloud.connecttoinstance.connectenv
title: ConnectToInstance.connectEnv() method
hide_title: true
original_id: cloud.connecttoinstance.connectenv
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [ConnectToInstance](./cloud.connecttoinstance.md) &gt; [connectEnv](./cloud.connecttoinstance.connectenv.md)

## ConnectToInstance.connectEnv() method

Supplies the set of environment variables that have all the information needed for a consumer of a service to connect to the provider.

<b>Signature:</b>

```typescript
connectEnv(): Environment | undefined;
```
<b>Returns:</b>

`Environment | undefined`

## Remarks

This may include information like network hostname(s), port(s), credentials, namespace, or any other service-specific information.

In cases where the service has not been deployed yet or the connection information is not yet available for any reason, the method will return `undefined`<!-- -->.

Providers are discouraged from using environment variable names that are too generic or are likely to conflict with other environment variables that may already be in use. For example, avoid names like `HOST` and `USERNAME`<!-- -->. Instead, use names that are likely to be unique to the type of service so that a consumer can use more than one type of service without causing naming conflicts.

Providers are encouraged to use environment variable names that are typically used by consumers of the service. For example, the provider of a Postgres database service should use the names `PGHOST` and `PGUSER`<!-- -->, which are defined in the Postgres documentation and are typically supported by most Postgres database clients.

Providers should never return partial information. Return `undefined` until all required connection information is available.
